tests/codegen/errors/reader/reader/type.integer-width.too-large.variant-4/atom.menu.error.reader.type.integer-width.too-large.variant-4.088/menu-reader-type.integer-width.too-large.variant-4-088.mon
;; TEST-ID: tests.codegen.menu.errors.reader.type.integer.width.too.large.variant.4.088
;; TEST-TIER: known-fail
;; TEST-STATUS: quarantined-baseline-2026-06-15
;; TEST-KNOWN-FAILURE: diagnostic-mismatch
;; TEST-SECTION: codegen
;; TEST-CATEGORY: errors
;; TEST-SUBSET: reader/type.integer-width.too-large.variant-4
;; TEST-MENU: errors/reader/type.integer-width.too-large.variant-4/atom.menu.error.reader.type.integer-width.too-large.variant-4.088
;; TEST-MENU-PATH: codegen/errors/reader/type.integer-width.too-large.variant-4/atom.menu.error.reader.type.integer-width.too-large.variant-4.088
;; TEST-CONTEXT: monadc.context.language.codegen-branch-coverage, monadc.context.language.codegen-atom-web, monadc.context.language.error-menu
;; TEST-PURPOSE: Pin reader.c diagnostic: invalid integer type 'I129': bit-width 129 exceeds
;; TEST-ATOM: atom.menu.error.reader.type.integer-width.too-large.variant-4.088
;; TEST-CODEGEN-ATOM: atom.menu.error.reader.type.integer-width.too-large.variant-4.088
;; TEST-ATOM-LEAF: atom.menu.error.reader.type.integer-width.too-large.variant-4.088
;; TEST-QUALITY: menu-error-diagnostic-branch-regression
;; TEST-EXPECT: fail:compile
;; TEST-ERROR-STAGE: reader
;; TEST-ERROR-FAMILY: type.integer-width.too-large.variant-4
;; TEST-ERROR-MESSAGE: invalid integer type 'I129': bit-width 129 exceeds
;; TEST-ERROR-SOURCE: reader.c
;; TEST-ERROR-PATH: reader.c:1152
;; TEST-CODEGEN-PATH: diagnostic.reader.type.integer-width.too-large.variant-4
;; TEST-TAG: fail
;; TEST-TAG: diagnostic
;; TEST-TAG: reader
;; TEST-TAG: menu
;; TEST-COVERAGE: reader.c:1152 invalid integer type 'I129': bit-width 129 exceeds
;; TEST-USES-ATOM: atom.menu.error.reader.type.integer-width.too-large.variant-4.088
;; TEST-USES-ATOM: atom.error.reader
;; TEST-USES-ATOM: atom.error.reader.type.integer-width.too-large.variant-4
;; TEST-USES-ATOM: atom.reader.error
;; TEST-DEPENDS-ON: atom.reader.lex.parse
;; TEST-REFINES: atom.error.reader
;; TEST-REFINES: atom.error.reader.type.integer-width.too-large.variant-4
;; TEST-REFINES: atom.reader.error
;; TEST-RELATED: atom.codegen.error.menu
;; TEST-CLI-TARGET: codegen errors reader reader

(module Main)
;; reader menu variant 4
(define (f [x : I129] -> I129) x)
(show (f 1))
